--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="Headerbtn">
       <div id="textchange">
         <h4>Text color</h4>
-        <input type="color" />
+        <input type="color" id="textcolor" value="#000000" />
       </div>
       <div id="bgchange">
         <h4>Background color</h4>
